# pyMBIR_UI

./: .gitignore  .pylintrc  MANIFEST.in  README.md  environment.yml  meta.yaml  pyproject.toml  readNeutronData.py  requirements.txt  setup.cfg  setup.py  testing_environment.yml
scripts/: angel  pyMBIR_UI
src/pyMBIR_UI/: NGI_GUI_indev.py  __init__.py  __main__.py  _version.py  advanced_parameters_handler.py  advanced_settings_handler.py  algorithm_dictionary_creator.py  angel.py  center_of_rotation.py  command_line_creator.py  config.json  config_handler.py  crop_handler.py  event_handler.py  fake_reconstruction_script.py  filter_preview.py  filter_tab_handler.py  fitting.py  general_settings_handler.py  gui_initialization.py  help_handler.py  import_data_handler.py  load_previous_session_launcher.py  loader.py  log_launcher.py  parameter_widget.py  parameters_tab_handler.py  preview.py  pyMBIR_UI.py  recon_HFIR_script_batch.py  reconstructed_output_handler.py  reconstruction_algorithm_config.json  reconstruction_launcher.py  roi_handler.py  select_instrument_launcher.py  session_handler.py  status_message_config.py  tilt_handler.py  venkat_function.py
src/pyMBIR_UI/advanced_settings/: advanced_settings_handler.py  advanced_settings_initialization.py
src/pyMBIR_UI/algorithms/: epithermal_correction.py  gamma_spots_removal.py
src/pyMBIR_UI/center_of_rotation/: center_of_rotation.py
src/pyMBIR_UI/crop/: crop_handler.py
src/pyMBIR_UI/data/: Data_Oscillation () Pixel(1146, 2116).txt  Data_Oscillation () Pixel(420, 418).txt  TI_Line_Profile () Pixel(1259, 531 to 1787, 537).txt  TI_Line_Profile () Pixel(1764, 894 to 3174, 894).txt  TI_Line_Profile () Pixel(514, 585 to 2076, 622).txt
src/pyMBIR_UI/guiresources/: gui_setup.py  gui_setup_backup.py  matplotlibwidget.py  matplotlibwidget_pyqtgraph.py  newcolormaps.py
src/pyMBIR_UI/ngI_tool/: ngItool.py
src/pyMBIR_UI/tilt/: base_algorithm.py  direct_minimization.py  phase_correlation.py  setup_0_180_degree_handler.py  smooth.py  tilt_handler.py  use_center.py
src/pyMBIR_UI/ui/: advanced_settings.ui  main_application.ui
src/pyMBIR_UI/utilities/: decorators.py  file_utilities.py  get.py  gui.py  math.py  multicore_filtering.py  table_utilities.py  thread.py
src/pyMBIR_UI/utility_backend/: Multi_example.xls  epithermal_correction.py  multi_calc_extension.py  multi_logger.py  multicore_filtering.py  pool_ext.py  save_load_backend.py
src/tomoORNL_ui/: __init__.py  __main__.py  algorithm_dictionary_creator.py  config.json  event_handler.py  general_settings_handler.py  gui_initialization.py  help_handler.py  import_data_handler.py  load_previous_session_launcher.py  loader.py  log_launcher.py  preview.py  readNeutronData.py  recon_HFIR_script_batch.py  reconstructed_output_handler.py  reconstruction_launcher.py  roi_handler.py  session_handler.py  tomoORNL_ui.py  venkat_function.py
src/tomoORNL_ui/advanced_settings/: advanced_settings_handler.py  advanced_settings_initialization.py
src/tomoORNL_ui/center_of_rotation/: center_of_rotation.py
src/tomoORNL_ui/crop/: crop_handler.py
src/tomoORNL_ui/tilt/: setup_0_180_degree_handler.py  tilt_handler.py  use_center.py
src/tomoORNL_ui/ui/: advanced_settings.ui  load_previous_session.ui  main_application.ui  password.ui  preview.ui
src/tomoORNL_ui/utilities/: file_utilities.py  get.py  gui.py  math.py
src/ui/: about.ui  advanced_settings.ui  main_application.ui  password.ui  preview.ui  setup_0_180_degrees_images.ui
(+3 files in other folders)
