[project]
name = "tomoORNL_ui"
authors = [
  {name = "Jean Bilheux", email = "bilheuxjm@ornl.gov"},
]
description = "UI to launch the tomoORNL reconstruction code"
dynamic = ["version"]
readme = "README.md"
requires-python = ""
license = { text = "BSD 3-Clause License" }
dependencies = [
  "numpy",
  "matplotlib"
]
keywords = ["tomoORNL", "CT reconstruction", "tomography", "neutron", "imaging"]

[project.urls]
Repository = "https://github.com/ornlneutronimaging/tomoORNL_ui"

#[project.scripts]
#pymbir_ui_cli = "tomoORNL_ui.__main__:"

[build-system]
requires = [
  "setuptools >= 40.6.0",
  "wheel",
  "toml",
  "versioningit"
]
build-backend = "setuptools.build_meta"
